# IDManager

./: LICENSE  README.md  pyproject.toml
src/id_manager/: __init__.py  manager.py
tests/: test_manager.py
